fix: items alignment

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   min-width: 50%;
   max-width: 100%;
   padding: 50px;
@@ -45,6 +46,7 @@
     gap: 30px;
     padding: 0;
     align-items: center;
+    justify-content: flex-start;
     h1 {
       display: none;
     }
